# ProPlan

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
proplan/: config.py  custom_models.py  database.py  enums.py  main.py  manage.py  models.py  notifications.py
proplan/endpoints/: auth.py  daysoff.py  projects.py  reports.py  tasks.py  users.py
proplan/managers/: auth_manager.py  dayoff_manager.py  notification_manager.py  project_manager.py  report_manager.py  scheduler_service.py  task_manager.py  user_manager.py
proplan/utils/: users_dependency.py
