
[project]
name = "proplan"
version = "0.1.0"
description = "ProPlan (Project Planning) - FastAPI + Postgres demo app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "SQLAlchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "typer>=0.12.3",
    "faker>=26.0.0",
]

[project.scripts]
proplan-seed = "proplan.manage:seed_command"
proplan-run = "proplan.main:run"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = ["httpx>=0.27.0", "pytest>=8.0.0"]
