
[project]
name = "proplan"
version = "0.1.0"
description = "ProPlan (Project Planning) - FastAPI + Postgres demo app"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.7,<3",
    "sqlmodel==0.0.21",
    "sqlalchemy>=2.0,<2.1",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "typer>=0.12.3",
    "faker>=26.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
proplan-seed = "proplan.manage:seed_command"
proplan-run = "proplan.main:run"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = ["pytest>=8.0.0"]
