
[project]
name = "proplan"
version = "0.1.0"
description = "ProPlan (Project Planning) - Async FastAPI + SQLModel + Postgres"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel==0.0.21",
    "SQLAlchemy>=2.0,<2.1",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.7",
    "python-multipart>=0.0.9",
    "typer>=0.12.3",
    "faker>=26.0.0",
    "httpx>=0.27.0",
    "apscheduler",
]

[project.scripts]
proplan-seed = "proplan.manage:seed_command"
proplan-run = "proplan.main:run"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = ["pytest>=8.0.0"]
